[gd_scene load_steps=57 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://player/sprites/adventurer-v1.5-Sheet.png" type="Texture" id=3]
[ext_resource path="res://player/effects/Sparks.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack_1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 42, 48 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "attack_1" ],
"method": "animation_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body/Attack1_HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_damage"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack_2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 49, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "attack_2" ],
"method": "animation_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body/Attack2_HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_damage"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_3"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 53, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "attack_3" ],
"method": "animation_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body/Attack3_HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_damage"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_stance"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 38, 41 ]
}

[sub_resource type="Animation" id=5]
resource_name = "draw_sword"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 69, 72 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "draw_sword" ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15, 14 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 22 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15, 16 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 13 ]
}

[sub_resource type="Animation" id=11]
resource_name = "sheath_sword"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 73, 76 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sheath_sword" ],
"method": "animation_finished"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 79, 80 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack_1"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack_stance"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "draw_sword"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "jump_landing"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "jump_peak"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "jump_start"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "sheath_sword"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "wall_ride"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachine" id=47]
states/attack_1/node = SubResource( 13 )
states/attack_1/position = Vector2( 691.5, 53.9057 )
states/attack_2/node = SubResource( 14 )
states/attack_2/position = Vector2( 788, 138.716 )
states/attack_3/node = SubResource( 15 )
states/attack_3/position = Vector2( 693.875, 221.942 )
states/attack_stance/node = SubResource( 16 )
states/attack_stance/position = Vector2( 612.5, 136.856 )
states/draw_sword/node = SubResource( 17 )
states/draw_sword/position = Vector2( 407.01, 52.5475 )
states/idle/node = SubResource( 18 )
states/idle/position = Vector2( 183.406, 53.2266 )
states/jump_landing/node = SubResource( 19 )
states/jump_landing/position = Vector2( 346.199, 273.741 )
states/jump_peak/node = SubResource( 20 )
states/jump_peak/position = Vector2( 112.414, 266.952 )
states/jump_start/node = SubResource( 21 )
states/jump_start/position = Vector2( 111.578, 130.839 )
states/run/node = SubResource( 22 )
states/run/position = Vector2( 347.125, 138.479 )
states/sheath_sword/node = SubResource( 23 )
states/sheath_sword/position = Vector2( 408.515, -4.1259 )
states/wall_ride/node = SubResource( 24 )
states/wall_ride/position = Vector2( 194.734, 205.31 )
transitions = [ "run", "jump_start", SubResource( 25 ), "jump_start", "jump_peak", SubResource( 26 ), "jump_peak", "jump_landing", SubResource( 27 ), "jump_landing", "idle", SubResource( 28 ), "jump_start", "wall_ride", SubResource( 29 ), "jump_peak", "wall_ride", SubResource( 30 ), "wall_ride", "jump_start", SubResource( 31 ), "jump_landing", "run", SubResource( 32 ), "idle", "run", SubResource( 33 ), "idle", "jump_start", SubResource( 34 ), "attack_stance", "attack_1", SubResource( 35 ), "attack_1", "attack_stance", SubResource( 36 ), "attack_1", "attack_2", SubResource( 37 ), "attack_2", "attack_3", SubResource( 38 ), "attack_3", "attack_stance", SubResource( 39 ), "attack_2", "attack_stance", SubResource( 40 ), "idle", "draw_sword", SubResource( 41 ), "draw_sword", "attack_stance", SubResource( 42 ), "sheath_sword", "idle", SubResource( 43 ), "attack_stance", "sheath_sword", SubResource( 44 ), "run", "idle", SubResource( 45 ), "run", "draw_sword", SubResource( 46 ) ]
start_node = "idle"
graph_offset = Vector2( 0, -67.5965 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=48]

[sub_resource type="CapsuleShape2D" id=49]
radius = 7.7671
height = 14.358

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 14.1909, 16.8427 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 17.7951, 15.1961 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 24.6143, 11.2042 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 23.0792, -2.39501 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 1 )
anims/attack_2 = SubResource( 2 )
anims/attack_3 = SubResource( 3 )
anims/attack_stance = SubResource( 4 )
anims/draw_sword = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump_landing = SubResource( 7 )
anims/jump_peak = SubResource( 8 )
anims/jump_start = SubResource( 9 )
anims/run = SubResource( 10 )
anims/sheath_sword = SubResource( 11 )
anims/wall_ride = SubResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 47 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.143909, 1.95186 )
shape = SubResource( 49 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.35, 0.35 )
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.1
drag_margin_top = 0.15
drag_margin_right = 0.1
drag_margin_bottom = 0.15

[node name="Body" type="Node2D" parent="."]

[node name="Attack1_HurtBox" type="Area2D" parent="Body"]
script = ExtResource( 2 )
attack_strength = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack1_HurtBox"]
visible = false
position = Vector2( 10.5831, -3.08632 )
shape = SubResource( 50 )

[node name="Attack2_HurtBox" type="Area2D" parent="Body"]
script = ExtResource( 2 )
attack_strength = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack2_HurtBox"]
visible = false
position = Vector2( 4.90717, 2.60423 )
shape = SubResource( 51 )

[node name="Attack3_HurtBox" type="Area2D" parent="Body"]
priority = 2.0
script = ExtResource( 2 )
attack_strength = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attack3_HurtBox"]
visible = false
position = Vector2( 0.850159, 4.65472 )
shape = SubResource( 52 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 3 )
vframes = 16
hframes = 7
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 350, 592 )

[node name="Effects" type="Node2D" parent="Body"]
z_index = 1

[node name="Sparks" parent="Body/Effects" instance=ExtResource( 4 )]
position = Vector2( 16.3783, 2.66959 )
randomness = 0.4
fract_delta = false

[node name="HeadPosition" type="Position2D" parent="Body"]
position = Vector2( 0.904686, -7.46367 )

[node name="UnderwaterTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="HangTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="UnderwaterTimer" to="." method="_on_UnderwaterTimer_timeout"]
[connection signal="timeout" from="HangTimer" to="." method="_on_HangTimer_timeout"]
